Prevent cursor blinking when not focused at startup

Thanks to Christoph Feck for patch

BUG: 336312
FIXED-IN: 4.14